--- a/src/LiurenSentient/LrsWebsite/Pages/MainLayout.razor
+++ b/src/LiurenSentient/LrsWebsite/Pages/MainLayout.razor
@@ -6,17 +6,10 @@
 
 <MudLayout>
     <MudAppBar Elevation="0">
-        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
+        <MudText Typo="Typo.h1">六壬吾心</MudText>
         <MudSpacer />
         <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://github.com/yueyinqiu/LiurenSentient.git" Target="_blank" />
     </MudAppBar>
-    <MudDrawer @bind-Open="isDrawerOpen" ClipMode="DrawerClipMode.Always" Elevation="1">
-        <MudNavMenu>
-            <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">主页</MudNavLink>
-            <MudNavLink Href="cases/new" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Add">起卦</MudNavLink>
-            <MudNavLink Href="cases" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Article">历史</MudNavLink>
-        </MudNavMenu>
-    </MudDrawer>
     <MudMainContent>
         <ErrorBoundary>
             <ChildContent>
