--- a/src/LiurenSentient/LrsWebsite/_Imports.razor
+++ b/src/LiurenSentient/LrsWebsite/_Imports.razor
@@ -1,11 +1,2 @@
-﻿@using System.Net.Http
-@using System.Net.Http.Json
-@using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Routing
-@using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
-@using Microsoft.JSInterop
-@using LrsWebsite
-@using LrsWebsite.Shared
+﻿@using Microsoft.AspNetCore.Components.Web
 @using MudBlazor
